@@ -1,178 +1,114 @@
-import io.netty.bootstrap.Bootstrap;
-import io.netty.channel.Channel;
-import io.netty.channel.EventLoopGroup;
-import io.netty.channel.nio.NioEventLoopGroup;
-import io.netty.channel.socket.nio.NioSocketChannel;
-import io.netty.handler.codec.http.ClientCookieEncoder;
-import io.netty.handler.codec.http.DefaultCookie;
-import io.netty.handler.codec.http.DefaultFullHttpRequest;
-import io.netty.handler.codec.http.HttpHeaders;
-import io.netty.handler.codec.http.HttpMethod;
-import io.netty.handler.codec.http.HttpRequest;
-import io.netty.handler.codec.http.HttpVersion;
-import io.netty.handler.ssl.SslContext;
-import io.netty.handler.ssl.util.InsecureTrustManagerFactory;
 
-import java.net.URI;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.URL;
+import java.net.HttpURLConnection;
+
 import org.junit.Test;
 
 
 public class HttpTest {
 
+	static final String serverURL = "http://127.0.0.1:8080/";
+	
+	private Thread startServer()
+	{
+		Thread t = new Thread(new Runnable() {
+	         public void run()
+	         {
+	        	 try {
+	        		 HttpTrainServer.startServer();
+	        	 } catch (Exception e) {
+	        		 
+	        	 }
+	         }
+		});
+		t.start();
+		return t;
+	}
+	
+	private void connectToServer(HttpURLConnection connection) throws IOException, InterruptedException
+	{
+        // give it 15 seconds to respond
+        connection.setReadTimeout(15*1000);
+        
+        // wait for the server to come up
+        for (int tryCount = 50; tryCount > 0; --tryCount) {
+	        try {
+	        	connection.connect();
+	        	return;
+	        } catch (IOException e) {
+	        	System.out.print("Connecting...");
+	        	if (tryCount <= 0)
+	        		throw e;
+	        	Thread.sleep(15 * 1000);
+	        }
+        }
+        
+		
+	}
+	
+	// Send a very simple GET request to the server and check the result
 	@Test
 	public void testGet() throws Exception {
-		Thread t = new Thread(new Runnable() {
-	         public void run()
-	         {
-	        	 try {
-	        		 HttpSnoopServer.startServer();
-	        	 } catch (Exception e) {
-	        		 
-	        	 }
-	         }
-		});
-		t.start();
-	    String URL = System.getProperty("url", "http://127.0.0.1:8080/");
+		Thread serverThread = startServer();
+		
+        HttpURLConnection connection = (HttpURLConnection) new URL(serverURL).openConnection();
+        connection.setRequestMethod("GET");
+        String charset = "UTF-8";
+        connection.setRequestProperty("Accept-Charset", charset);
 
-        URI uri = new URI(URL);
-        String scheme = uri.getScheme() == null? "http" : uri.getScheme();
-        String host = uri.getHost() == null? "127.0.0.1" : uri.getHost();
-        int port = uri.getPort();
-        if (port == -1) {
-            if ("http".equalsIgnoreCase(scheme)) {
-                port = 80;
-            } else if ("https".equalsIgnoreCase(scheme)) {
-                port = 443;
-            }
+        // give it 15 seconds to respond
+        connection.setReadTimeout(15*1000);
+        
+        connectToServer(connection);
+        
+        // read the output from the server
+        BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+        StringBuilder stringBuilder = new StringBuilder();
+   
+        String line = null;
+        while ((line = reader.readLine()) != null)
+        {
+          stringBuilder.append(line + "\n");
         }
+        System.out.println(stringBuilder.toString());
 
-        if (!"http".equalsIgnoreCase(scheme) && !"https".equalsIgnoreCase(scheme)) {
-            System.err.println("Only HTTP(S) is supported.");
-            return;
-        }
-
-        // Configure SSL context if necessary.
-        final boolean ssl = "https".equalsIgnoreCase(scheme);
-        final SslContext sslCtx;
-        if (ssl) {
-            sslCtx = SslContext.newClientContext(InsecureTrustManagerFactory.INSTANCE);
-        } else {
-            sslCtx = null;
-        }
-
-        // Configure the client.
-        EventLoopGroup group = new NioEventLoopGroup();
-        try {
-            Bootstrap b = new Bootstrap();
-            b.group(group)
-             .channel(NioSocketChannel.class)
-             .handler(new HttpSnoopClientInitializer(sslCtx));
-
-            // Make the connection attempt.
-            Channel ch = b.connect(host, port).sync().channel();
-
-            // Prepare the HTTP request.
-            HttpRequest request = new DefaultFullHttpRequest(
-                    HttpVersion.HTTP_1_1, HttpMethod.GET, uri.getRawPath());
-            request.headers().set(HttpHeaders.Names.HOST, host);
-            request.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.CLOSE);
-            request.headers().set(HttpHeaders.Names.ACCEPT_ENCODING, HttpHeaders.Values.GZIP);
-
-            // Set some example cookies.
-            request.headers().set(
-                    HttpHeaders.Names.COOKIE,
-                    ClientCookieEncoder.encode(
-                            new DefaultCookie("my-cookie", "foo"),
-                            new DefaultCookie("another-cookie", "bar")));
-
-            // Send the HTTP request.
-            ch.writeAndFlush(request);
-
-            // Wait for the server to close the connection.
-            ch.closeFuture().sync();
-        } finally {
-            // Shut down executor threads to exit.
-            group.shutdownGracefully();
-        }
-        t.join();
+        HttpTrainServer.stopServer();
+        serverThread.join();
     }
 
+	// Send a simple POST request to the server with some JSON as content and check the result
 	@Test
 	public void testPost() throws Exception {
-		Thread t = new Thread(new Runnable() {
-	         public void run()
-	         {
-	        	 try {
-	        		 HttpSnoopServer.startServer();
-	        	 } catch (Exception e) {
-	        		 
-	        	 }
-	         }
-		});
-		t.start();
-	    String URL = System.getProperty("url", "http://127.0.0.1:8080/");
+		Thread serverThread = startServer();
+		
+		String jsonPayload = "{\"foo\":\"bar\"}";
 
-        URI uri = new URI(URL);
-        String scheme = uri.getScheme() == null? "http" : uri.getScheme();
-        String host = uri.getHost() == null? "127.0.0.1" : uri.getHost();
-        int port = uri.getPort();
-        if (port == -1) {
-            if ("http".equalsIgnoreCase(scheme)) {
-                port = 80;
-            } else if ("https".equalsIgnoreCase(scheme)) {
-                port = 443;
-            }
+        HttpURLConnection connection = (HttpURLConnection) new URL(serverURL).openConnection();
+        connection.setRequestMethod("GET");
+        String charset = "UTF-8";
+        connection.setRequestProperty("Accept-Charset", charset);
+        connection.setDoOutput(true);
+        connectToServer(connection);
+        connection.getOutputStream().write(jsonPayload.getBytes());
+        // give it 15 seconds to respond
+        connection.setReadTimeout(15*1000);
+        
+        
+        // read the output from the server
+        BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+        StringBuilder stringBuilder = new StringBuilder();
+   
+        String line = null;
+        while ((line = reader.readLine()) != null)
+        {
+          stringBuilder.append(line + "\n");
         }
+        System.out.println(stringBuilder.toString());
 
-        if (!"http".equalsIgnoreCase(scheme) && !"https".equalsIgnoreCase(scheme)) {
-            System.err.println("Only HTTP(S) is supported.");
-            return;
-        }
-
-        // Configure SSL context if necessary.
-        final boolean ssl = "https".equalsIgnoreCase(scheme);
-        final SslContext sslCtx;
-        if (ssl) {
-            sslCtx = SslContext.newClientContext(InsecureTrustManagerFactory.INSTANCE);
-        } else {
-            sslCtx = null;
-        }
-
-        // Configure the client.
-        EventLoopGroup group = new NioEventLoopGroup();
-        try {
-            Bootstrap b = new Bootstrap();
-            b.group(group)
-             .channel(NioSocketChannel.class)
-             .handler(new HttpSnoopClientInitializer(sslCtx));
-
-            // Make the connection attempt.
-            Channel ch = b.connect(host, port).sync().channel();
-
-            // Prepare the HTTP request.
-            HttpRequest request = new DefaultFullHttpRequest(
-                    HttpVersion.HTTP_1_1, HttpMethod.POST, uri.getRawPath());
-            request.headers().set(HttpHeaders.Names.HOST, host);
-            request.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.CLOSE);
-            request.headers().set(HttpHeaders.Names.ACCEPT_ENCODING, HttpHeaders.Values.GZIP);
-
-            // Set some example cookies.
-            request.headers().set(
-                    HttpHeaders.Names.COOKIE,
-                    ClientCookieEncoder.encode(
-                            new DefaultCookie("my-cookie", "foo"),
-                            new DefaultCookie("another-cookie", "bar")));
-
-            // Send the HTTP request.
-            ch.writeAndFlush(request);
-
-            // Wait for the server to close the connection.
-            ch.closeFuture().sync();
-        } finally {
-            // Shut down executor threads to exit.
-            group.shutdownGracefully();
-        }
-        t.join();
+        serverThread.join();
     }
 
 }
